--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -51,6 +51,10 @@ nav {
   a img {
       width: 20px;
       height: 20px; }
+
+  a{
+    color: black;
+  }
 /***
 ul {
     list-style-type: none;
