--- a/project/Core/styles-core.css
+++ b/project/Core/styles-core.css
@@ -63,7 +63,7 @@ nav{
 
 .Details{
     text-align: left;
-    font-family: 'noahregular';
+    font-family: sans-serif;
     font-size: 20px;
     line-height: 1.1;
     word-spacing: .5px;
