--- a/project/Core/styles-core.css
+++ b/project/Core/styles-core.css
@@ -65,8 +65,9 @@ nav{
     text-align: left;
     font-family: sans-serif;
     font-size: 20px;
-    line-height: 1.1;
+    line-height: 1.5;
     word-spacing: .5px;
+    font-weight: 400;
 }
 .Title{
     font-weight: bold;
