--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -155,8 +155,10 @@ section{
   }
 
  
+
   .project img{
     height: 180px;
+    width: 100%;
     margin-left:auto;
     margin-right: auto;
     border: solid 1.5px black;
@@ -181,6 +183,19 @@ section{
       min-width:150px;
     }
 
+  .project{
+      text-align: center;
+      justify-content: center;
+    }
+    
+  .project img{
+    height: 180px;
+    width: 50%;
+    margin-left:auto;
+    margin-right: auto;
+    border: solid 1.5px black;
+    border-radius: 5px;
+  }
     
 
   }
