--- a/CSS/index.css
+++ b/CSS/index.css
@@ -78,7 +78,7 @@ li a.navbar:hover{
    
 }
 .gallery{
-    background-color: #eeefe4;
+    background-color: #f3f3ef;
     color:black;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-left: 10%;
