--- a/CSS/index.css
+++ b/CSS/index.css
@@ -13,22 +13,29 @@ body {
     
     margin: 0;
     padding:0;
-    background-color: #f3f3ef;
+    background-color: #dbeeff;
  
      
 }
 
+.container{
+    margin-right: 30%;
+    margin-left: 30%;
+    padding: 2rem;
+    background-color: rgb(255, 255, 255);
 
+}
 .header{
     display: flex;
     flex-direction: column;
-    background-color: #f3f3ef;
+    background-color: rgb(255, 255, 255);
     color:black;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-left: 10%;
-    padding-right: 10%;
+
     padding-top: 5%;
     padding-bottom: 3%;
+ 
+ 
     
 }
 
@@ -52,25 +59,32 @@ li a {
   margin-right: 12px;
   text-decoration: none;
   color: black;
-  font-weight: bold;
+  font-weight: normal;
 }
 
 li a.navbar {
     display: block;
     margin-top: 15px;
-    margin-bottom: 15px;
+    padding-bottom: 5%;
+    margin-bottom: 15%;
     margin-right: 12px;
     text-decoration: none;
     color: black;
     font-weight: bold;
-   
+    background-image: linear-gradient(#000 0 0);
+    background-position: 0 100%; /*OR bottom left*/
+    background-size: 0% 2px;
+    background-repeat: no-repeat;
+    transition:
+      background-size 0.3s,
+      background-position 0s 0.3s; 
   }
 
   
 
 li a.navbar:hover{
-    color: white;
-    background-color: rgb(2, 65, 7);
+     background-position: 100% 100%; /*OR bottom right*/
+    background-size: 100% 2px;
 }
 
 .bottom{
@@ -78,19 +92,16 @@ li a.navbar:hover{
    
 }
 .gallery{
-    background-color: #f3f3ef;
+    background-color: rgb(255, 255, 255);
     color:black;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-left: 10%;
-    margin-right: 10%;
-   
     padding-bottom: 5%;
     
     
 }
 
-.gallery h1{
-    margin-bottom: 10px;
+.gallery h2{
+  text-decoration: underline;
 }
 
     
@@ -108,30 +119,40 @@ li a.navbar:hover{
 
 
   .col {
-    flex: 25%;
-    padding-bottom: 2%;
+    flex: 100%;
     padding-right: 1%;
- 
-    
+    padding-bottom: 0%;
+    margin: 0%;
    
   }
 
 
   h3 a{
-    text-decoration: none;
+   text-decoration: none;
     color: black;
   }
 
+ li {
+  line-height: 1em;
+  padding: 0%;
+  margin:0%
 
+ }
   
   .col p{
     padding-right: 10px;
-    font-style: italic;
-    
-    
+    font-style: italic; 
   }
+
+  .col li {
+     margin-left: 30px;
+     font-style: italic;
+  }
+  
   .col h3{
-    background-color: rgb(255, 191, 161);
+    margin:0%;
+    padding: 0%;
+    line-height: 0%;
     background-image: linear-gradient(#000 0 0);
     background-position: 0 100%; /*OR bottom left*/
     background-size: 0% 2px;
