--- a/CSS/index.css
+++ b/CSS/index.css
@@ -215,8 +215,9 @@ li a.navbar:hover{
 
 
   }
-  
+
   /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+    /*
   @media screen and (max-width: 600px) {
     .flex-grid {
       flex-direction: column;
@@ -236,3 +237,4 @@ li a.navbar:hover{
 
      
   }
+     */
