--- a/CSS/index.css
+++ b/CSS/index.css
@@ -23,11 +23,15 @@ body {
     margin-left: 30%;
     padding: 2rem;
     background-color: rgb(255, 255, 255);
+      flex-shrink: 0;   /* Prevent shrinking */
+   min-width: 500px; 
+    
 
 }
 .header{
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
     background-color: rgb(255, 255, 255);
     color:black;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
