--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,29 +2,34 @@
     padding:0;
     margin:0;
     box-sizing: border-box; 
+   
 }
 
-html,body { height:100%; }
-
+html,body { }
 
 
 body {
     width: 100%;
-    
+    height: 100%;
     margin: 0;
     padding:0;
     background-color: #dbeeff;
+    display: flex;
+    justify-content: center; /* centers horizontally */
+    
  
      
 }
 
 .container{
-    margin-right: 30%;
-    margin-left: 30%;
-    padding: 2rem;
-    background-color: rgb(255, 255, 255);
-      flex-shrink: 0;   /* Prevent shrinking */
-   min-width: 500px; 
+ margin: 0 auto;
+  padding: 2rem;
+  background-color: white;
+  max-width: 600px;
+  min-width: 400px;
+  width: 60%
+ 
+
     
 
 }
@@ -35,7 +40,6 @@ body {
     background-color: rgb(255, 255, 255);
     color:black;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
     padding-top: 5%;
     padding-bottom: 3%;
  
@@ -45,15 +49,19 @@ body {
 
 
 ul {
-  list-style-type: none;
-  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.5rem;
   padding: 0;
-  overflow: hidden;
-  width: 80%;
+  margin: 0 auto;
+  list-style: none;
+  width: 100%;
 }
 
 li {
-  float: left;
+   float: none;
+  white-space: nowrap;
 }
 
 li a {
@@ -92,7 +100,10 @@ li a.navbar:hover{
 }
 
 .bottom{
+    display: flex;
+    flex-direction: column;
     margin: auto;
+    min-width: 40%; 
    
 }
 .gallery{
