--- a/CSS/index.css
+++ b/CSS/index.css
@@ -42,16 +42,13 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-top: 5%;
     padding-bottom: 3%;
- 
- 
-    
-}
 
+}
 
 ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 0.5rem;
   padding: 0;
   margin: 0 auto;
@@ -160,7 +157,7 @@ li a.navbar:hover{
   }
 
   .col li {
-     margin-left: 30px;
+     margin-left: 4%;
      font-style: italic;
   }
   
