--- a/CSS/index.css
+++ b/CSS/index.css
@@ -27,7 +27,8 @@ body {
   background-color: white;
   max-width: 600px;
   min-width: 400px;
-  width: 60%
+  width: 60%;
+  height: 100%;
  
 
     
